# marcel-zoo

./: .gitignore  MARCEL.md  README.md  conftest.py  pyproject.toml  pytest.ini  routing.yaml
agents/: explore.md  plan.md  power.md
channels/telegram/: CHANNEL.md  __init__.py  bot.py  channel.yaml  formatting.py  sessions.py  webhook.py
channels/telegram/tests/: conftest.py  test_formatting.py  test_telegram.py  test_telegram_bot.py  test_telegram_bot_http.py  test_telegram_scenarios.py  test_telegram_webhook.py  test_webhook_scenarios.py
integrations/banking/: __init__.py  cache.py  client.py  integration.yaml  sync.py
integrations/banking/tests/: test_banking.py
integrations/docker/: __init__.py  integration.yaml
integrations/icloud/: __init__.py  client.py  integration.yaml
integrations/icloud/tests/: test_handlers.py
integrations/news/: README.md  __init__.py  cache.py  feeds.yaml  integration.yaml  sync.py
integrations/news/tests/: test_news.py
jobs/check/: template.yaml
jobs/digest/: template.yaml
jobs/scrape/: template.yaml
jobs/sync/: template.yaml
skills/banking/: SETUP.md  SKILL.md  components.yaml
skills/developer/: SKILL.md
skills/docker/: SETUP.md  SKILL.md
skills/icloud/: SETUP.md  SKILL.md
skills/jobs/: SKILL.md
skills/memory/: SKILL.md
skills/news/: SETUP.md  SKILL.md
skills/settings/: SKILL.md
skills/ui/: SKILL.md  components.yaml
skills/web/: SETUP.md  SKILL.md
